Fixed spacing in menu

--- a/themes/hugo-alageek-theme/static/css/main.css
+++ b/themes/hugo-alageek-theme/static/css/main.css
@@ -140,7 +140,8 @@ h6 {
 }
 
 .header ul.nav li.nav-item::before {
-    content: "·";
+    content: "-";
+    margin-right: 5px;
 }
 
 .header ul.nav li.nav-item:first-child::before {
